nodejs-deployment/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 0
  selector:
    matchLabels:
      io.kompose.service: nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nodejs
    spec:
      nodeSelector:
        tier: nodejs
      containers:
      - args:
        - ./wait-for.sh
        - db:27017
        - --
        - /home/node/app/node_modules/.bin/nodemon
        - app.js
        image: mrmagik/nodejs-docker:2.0
        name: nodejs
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
             path: /health
             port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
      restartPolicy: Always
status: {}
