nodejs-deployment/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 80
